--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
   <h1>📣 Assistant IA - Le Bon Coin</h1>
 
   <div class="section">
-    <label for="apiKey"> Clé API Open AI:</label>
+    <label for="apiKey">🔑 Clé API OpenAI :</label>
     <input type="password" id="apiKey" placeholder="sk-..." />
   </div>
 
