--- a/index.html
+++ b/index.html
@@ -2,76 +2,83 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Assistant IA Le Bon Coin</title>
+  <title>Assistant Le Bon Coin</title>
   <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 2em; background: #f6f6f6; }
-    textarea, input, button { width: 100%; margin-top: 10px; padding: 10px; font-size: 1em; }
-    button { background: #ff6f00; color: white; border: none; cursor: pointer; }
-    button:hover { background: #e65c00; }
-    .section { margin-top: 2em; background: white; padding: 1.5em; border-radius: 10px; box-shadow: 0 0 5px rgba(0,0,0,0.1); }
-    label { font-weight: bold; }
-    #output { white-space: pre-wrap; background: #eef; padding: 10px; margin-top: 1em; border-radius: 5px; }
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      box-sizing: border-box;
+    }
+    button {
+      background-color: #e65c00;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      margin-top: 10px;
+      cursor: pointer;
+    }
+    #response {
+      margin-top: 20px;
+      background: #f0f0f0;
+      padding: 15px;
+      white-space: pre-wrap;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
-  <h1>📣 Assistant IA - Le Bon Coin</h1>
+  <h1>Assistant IA pour Le Bon Coin</h1>
 
-  <div class="section">
-    <label for="apiKey">🔑 Clé API OpenAI :</label>
-    <input type="password" id="apiKey" placeholder="sk-..." />
-  </div>
+  <label for="apiKey">🔑 Clé API OpenAI :</label>
+  <input id="apiKey" placeholder="sk-..." />
 
-  <div class="section">
-    <h2>📝 Générer une annonce</h2>
-    <textarea id="productInput" rows="5" placeholder="Décris ton produit ici..."></textarea>
-    <button onclick="generateAd()">Générer l'annonce</button>
-    <div id="adOutput"></div>
-  </div>
+  <label for="userInput">📝 Que veux-tu demander à l'IA ?</label>
+  <textarea id="userInput" rows="5" placeholder="Ex : Rédige une annonce pour un iPhone 13 Pro 128 Go en bon état..."></textarea>
 
-  <div class="section">
-    <h2>💬 Répondre à un message client</h2>
-    <textarea id="clientMsg" rows="4" placeholder="Message reçu du client..."></textarea>
-    <button onclick="generateReply()">Générer une réponse</button>
-    <div id="replyOutput"></div>
-  </div>
+  <button onclick="callGPT()">Envoyer à l’IA</button>
+
+  <pre id="response"></pre>
 
   <script>
-    async function callGPT(prompt) {
+    async function callGPT() {
       const apiKey = document.getElementById("apiKey").value;
-      if (!apiKey) {
-        alert("Merci d’entrer votre clé API OpenAI.");
+      const prompt = document.getElementById("userInput").value;
+      const responseElement = document.getElementById("response");
+
+      if (!apiKey || !prompt) {
+        responseElement.innerText = "⚠️ Remplis bien tous les champs !";
         return;
       }
 
-      const response = await fetch("https://api.openai.com/v1/chat/completions", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": `Bearer ${apiKey}`
-        },
-        body: JSON.stringify({
-          model: "gpt-4",
-          messages: [{ role: "user", content: prompt }],
-          max_tokens: 500
-        })
-      });
+      responseElement.innerText = "⏳ Réponse en cours...";
 
-      const data = await response.json();
-      return data.choices?.[0]?.message?.content;
-    }
+      try {
+        const res = await fetch("https://api.openai.com/v1/chat/completions", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": `Bearer ${apiKey}`
+          },
+          body: JSON.stringify({
+            model: "gpt-3.5-turbo",
+            messages: [{ role: "user", content: prompt }]
+          })
+        });
 
-    async function generateAd() {
-      const input = document.getElementById("productInput").value;
-      const prompt = `Je veux créer une annonce sur Le Bon Coin. Voici la description du produit : "${input}". Génère un titre, une description propre, et un prix estimé.`;
-      const result = await callGPT(prompt);
-      document.getElementById("adOutput").innerText = result || "Erreur lors de la génération.";
-    }
+        const data = await res.json();
+        const reply = data.choices?.[0]?.message?.content || "❌ Aucune réponse reçue.";
+        responseElement.innerText = reply;
 
-    async function generateReply() {
-      const message = document.getElementById("clientMsg").value;
-      const prompt = `Voici un message reçu d’un client sur Le Bon Coin : "${message}". Propose une réponse polie, claire et commerciale.`;
-      const result = await callGPT(prompt);
-      document.getElementById("replyOutput").innerText = result || "Erreur lors de la génération.";
+      } catch (err) {
+        responseElement.innerText = "❌ Erreur : " + err.message;
+      }
     }
   </script>
 </body>
